--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "graphql": "^15.8.0",
     "joi": "^17.7.0",
     "leaflet": "^1.9.3",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.0",
     "next": "12.3.2",
     "next-mdx-remote": "^4.2.0",
     "react": "18.2.0",
