це просто classic, я б навіть сказав pleasantly

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@apollo/client": "^3.7.3",
     "@hookform/resolvers": "^2.9.10",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "cloudinary": "^1.37.0",
+    "formidable": "^2.1.1",
     "graphql": "^15.8.0",
     "joi": "^17.7.0",
     "leaflet": "^1.9.3",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
+    "multiparty": "^4.2.3",
     "next": "12.3.2",
     "next-mdx-remote": "^4.2.0",
     "react": "18.2.0",
