wabba lubba dub dub

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.37.0",
     "formidable": "^2.1.1",
     "joi": "^17.7.0",
     "leaflet": "^1.9.3",
     "mongoose": "^7.2.0",
     "next": "12.3.2",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
